--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,16 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/statusBar</item>
         <item name="colorAccent">@color/darkOrange</item>
+        <item name="android:statusBarColor">@color/statusBar</item>
     </style>
-
-    <style name="Base.Widget.AppCompat.RatingBar.Indicator">
-        <item name="colorControlNormal">@color/lightOrange</item>
-        <item name="colorControlActivated">@color/darkOrange</item>
-    </style>
-
 </resources>
