--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimary">#FAFAFA</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
     <color name="darkOrange">#ff7200</color>
+    <color name="colorAccent">@color/darkOrange</color>
     <color name="lightOrange">#FF9C4C</color>
     <color name="statusBar">#727272</color>
+    <color name="dotsBackground">#8d000000</color>
 </resources>
